# ha-pecron

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  pyproject.toml  requirements-dev.txt
.beads/: issues.jsonl
custom_components/pecron/: __init__.py  config_flow.py  manifest.json  select.py  sensor.py  strings.json
tests/: test_battery_power.py  test_energy_sensors.py  test_split_input_power.py
