[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-pecron"
version = "0.1.0"
description = "Home Assistant integration for Pecron portable power stations"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Jesse Sightler", email = "jsightler@example.com"}]
requires-python = ">=3.11"
dependencies = ["unofficial-pecron-api==0.3.0"]

[project.urls]
Homepage = "https://github.com/jsight/ha-pecron"
Repository = "https://github.com/jsight/ha-pecron"
Issues = "https://github.com/jsight/ha-pecron/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false

[[tool.mypy.overrides]]
module = "unofficial_pecron_api.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "homeassistant.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=custom_components/pecron --cov-report=term-missing"
